--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- ----------------------------------------NAVBAR----------------------------------------------------->
     <nav class="nav nav_top">
         <div class="logo">
-            <a href="index.html"><img src="images/LOGO.jpg" width="500px" height="50px"></a>
+            <a href="index.html"><img src="images/logo.jpg" width="500px" height="50px"></a>
         </div>
         <div class="nav_side">
             <a href="index.html">HOME</a>
@@ -98,7 +98,7 @@
     <!-- --------------------------------------------FOOTER-------------------------------------------------------->
     <footer>
         <div class="pages"> 
-            <a href="index.html"><img class="aimg" src="images/LOGO.jpg" width="250"></a> 
+            <a href="index.html"><img class="aimg" src="images/logo.jpg" width="250"></a> 
             <p>Help Human Foundation cares for needy children by empowering their caregivers to do their best work, with compassion, grace, integrity and excellence. Our end goal is to support children worldwide and see every child reach the potential that God has for them.</p>
             <a href="https://www.facebook.com/jatav.rishi" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
             <a href="https://www.linkedin.com/in/rishi-kardam-3879a1241" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
